versions/0.9.0/_sources/refs/_aws-cdk_aws-iam.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"fIyMVFxjYq59As0qkav4oSgV/3dgOLJEX4++IbJC46Y="}

@aws-cdk/aws-iam
================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.IAM/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.IAM" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.IAM --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.IAM" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/iam/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:iam:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="iam" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>iam</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:iam:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='iam', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iam/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iam@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iam": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iam@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iam/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iam@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iam": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iam@0.9.0



.. mdinclude:: ./__aws-cdk_aws-iam.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-iam

AccessKeyId
^^^^^^^^^^^

.. py:class:: AccessKeyId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.AccessKeyId;

      .. code-tab:: javascript

         const { AccessKeyId } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { AccessKeyId } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

AccessKeySecretAccessKey
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AccessKeySecretAccessKey(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.AccessKeySecretAccessKey;

      .. code-tab:: javascript

         const { AccessKeySecretAccessKey } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { AccessKeySecretAccessKey } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

AwsManagedPolicy
^^^^^^^^^^^^^^^^

.. py:class:: AwsManagedPolicy(managedPolicyName)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.AwsManagedPolicy;

      .. code-tab:: javascript

         const { AwsManagedPolicy } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { AwsManagedPolicy } from '@aws-cdk/aws-iam';



   A policy managed by AWS  For this managed policy, you only need to know the name to be able to use it.  Some managed policy names start with "service-role/", some start with "job-function/", and some don't start with anything. Do include the prefix when constructing this object.


   :param managedPolicyName: 
   :type managedPolicyName: string

   .. py:attribute:: managedPolicyName

      :type: string *(readonly)*


   .. py:attribute:: policyArn

      The Arn of this managed policy


      :type: :py:class:`@aws-cdk/cdk.Arn` *(readonly)*


Group
^^^^^

.. py:class:: Group(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.Group;

      .. code-tab:: javascript

         const { Group } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { Group } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`~@aws-cdk/aws-iam.IIdentityResource`
   :implements: :py:class:`~@aws-cdk/aws-iam.IPrincipal`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-iam.GroupProps`

   .. py:method:: addToPolicy(statement)

      Adds an IAM statement to the default policy.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: addUser(user)

      Adds a user to this group.


      :param user: 
      :type user: :py:class:`~@aws-cdk/aws-iam.User`


   .. py:method:: attachInlinePolicy(policy)

      Attaches a policy to this group.


      :param policy: The policy to attach.
      :type policy: :py:class:`~@aws-cdk/aws-iam.Policy`


   .. py:method:: attachManagedPolicy(arn)

      Attaches a managed policy to this group.


      :param arn: The ARN of the managed policy to attach.
      :type arn: :py:class:`@aws-cdk/cdk.Arn`


   .. py:attribute:: groupArn

      The ARN of this group.


      :type: :py:class:`~@aws-cdk/aws-iam.GroupArn` *(readonly)*


   .. py:attribute:: groupName

      The runtime name of this group.


      :type: :py:class:`~@aws-cdk/aws-iam.GroupName` *(readonly)*


   .. py:attribute:: principal

      An "AWS" policy principal that represents this group.


      :type: :py:class:`@aws-cdk/cdk.PolicyPrincipal` *(readonly)*


GroupArn
^^^^^^^^

.. py:class:: GroupArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.GroupArn;

      .. code-tab:: javascript

         const { GroupArn } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { GroupArn } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

GroupName
^^^^^^^^^

.. py:class:: GroupName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.GroupName;

      .. code-tab:: javascript

         const { GroupName } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { GroupName } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

GroupProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: GroupProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.GroupProps;

      .. code-tab:: javascript

         // GroupProps is an interface

      .. code-tab:: typescript

         import { GroupProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: groupName

      A name for the IAM group. For valid values, see the GroupName parameter for the CreateGroup action in the IAM API Reference. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the group name.  If you specify a name, you must specify the CAPABILITY_NAMED_IAM value to acknowledge your template's capabilities. For more information, see Acknowledging IAM Resources in AWS CloudFormation Templates.


      :type: string or undefined


   .. py:attribute:: managedPolicyArns

      A list of ARNs for managed policies associated with group.


      :type: any[] or undefined


   .. py:attribute:: path

      The path to the group. For more information about paths, see [IAM Identifiers](http://docs.aws.amazon.com/IAM/latest/UserGuide/index.html?Using_Identifiers.html) in the IAM User Guide.


      :type: string or undefined


IIdentityResource (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IIdentityResource

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.IIdentityResource;

      .. code-tab:: javascript

         // IIdentityResource is an interface

      .. code-tab:: typescript

         import { IIdentityResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`~@aws-cdk/aws-iam.IPrincipal`


IPrincipal (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IPrincipal

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.IPrincipal;

      .. code-tab:: javascript

         // IPrincipal is an interface

      .. code-tab:: typescript

         import { IPrincipal } from '@aws-cdk/aws-iam';



   A construct that represents an IAM principal, such as a user, group or role.




   .. py:attribute:: principal

      The IAM principal of this identity (i.e. AWS principal, service principal, etc).


      :type: :py:class:`@aws-cdk/cdk.PolicyPrincipal` *(readonly)*


   .. py:method:: addToPolicy(statement)

      Adds an IAM statement to the default inline policy associated with this principal. If a policy doesn't exist, it is created.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: attachInlinePolicy(policy)

      Attaches an inline policy to this principal. This is the same as calling `policy.addToXxx(principal)`.


      :param policy: The policy resource to attach to this principal.
      :type policy: :py:class:`~@aws-cdk/aws-iam.Policy`


   .. py:method:: attachManagedPolicy(arn)

      Attaches a managed policy to this principal.


      :param arn: The ARN of the managed policy
      :type arn: :py:class:`@aws-cdk/cdk.Arn`


InstanceProfileArn
^^^^^^^^^^^^^^^^^^

.. py:class:: InstanceProfileArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.InstanceProfileArn;

      .. code-tab:: javascript

         const { InstanceProfileArn } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { InstanceProfileArn } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

InstanceProfileName
^^^^^^^^^^^^^^^^^^^

.. py:class:: InstanceProfileName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.InstanceProfileName;

      .. code-tab:: javascript

         const { InstanceProfileName } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { InstanceProfileName } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ManagedPolicyArn
^^^^^^^^^^^^^^^^

.. py:class:: ManagedPolicyArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.ManagedPolicyArn;

      .. code-tab:: javascript

         const { ManagedPolicyArn } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { ManagedPolicyArn } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

Policy
^^^^^^

.. py:class:: Policy(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.Policy;

      .. code-tab:: javascript

         const { Policy } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { Policy } from '@aws-cdk/aws-iam';



   The AWS::IAM::Policy resource associates an IAM policy with IAM users, roles, or groups. For more information about IAM policies, see [Overview of IAM Policies](http://docs.aws.amazon.com/IAM/latest/UserGuide/policies_overview.html) in the IAM User Guide guide.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/cdk.IDependable`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-iam.PolicyProps`

   .. py:method:: addStatement(statement)

      Adds a statement to the policy document.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: attachToGroup(group)

      Attaches this policy to a group.


      :param group: 
      :type group: :py:class:`~@aws-cdk/aws-iam.Group`


   .. py:method:: attachToRole(role)

      Attaches this policy to a role.


      :param role: 
      :type role: :py:class:`~@aws-cdk/aws-iam.Role`


   .. py:method:: attachToUser(user)

      Attaches this policy to a user.


      :param user: 
      :type user: :py:class:`~@aws-cdk/aws-iam.User`


   .. py:method:: validate() -> string[]

      This method can be implemented by derived constructs in order to perform validation logic. It is called on all constructs before synthesis.


      :rtype: string[]


   .. py:attribute:: dependencyElements

      Lists all the elements consumers should "depend-on".


      :type: :py:class:`@aws-cdk/cdk.IDependable`[] *(readonly)*


   .. py:attribute:: document

      The policy document.


      :type: :py:class:`@aws-cdk/cdk.PolicyDocument` *(readonly)*


   .. py:attribute:: policyName

      The name of this policy.


      :type: string *(readonly)*


PolicyName
^^^^^^^^^^

.. py:class:: PolicyName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.PolicyName;

      .. code-tab:: javascript

         const { PolicyName } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { PolicyName } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.PolicyProps;

      .. code-tab:: javascript

         // PolicyProps is an interface

      .. code-tab:: typescript

         import { PolicyProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: groups

      Groups to attach this policy to. You can also use `attachToGroup(group)` to attach this policy to a group.


      :type: :py:class:`~@aws-cdk/aws-iam.Group`[] or undefined


   .. py:attribute:: policyName

      The name of the policy. If you specify multiple policies for an entity, specify unique names. For example, if you specify a list of policies for an IAM role, each policy must have a unique name.


      :type: string or undefined


   .. py:attribute:: roles

      Roles to attach this policy to. You can also use `attachToRole(role)` to attach this policy to a role.


      :type: :py:class:`~@aws-cdk/aws-iam.Role`[] or undefined


   .. py:attribute:: statements

      Initial set of permissions to add to this policy document. You can also use `addPermission(statement)` to add permissions later.


      :type: :py:class:`@aws-cdk/cdk.PolicyStatement`[] or undefined


   .. py:attribute:: users

      Users to attach this policy to. You can also use `attachToUser(user)` to attach this policy to a user.


      :type: :py:class:`~@aws-cdk/aws-iam.User`[] or undefined


Role
^^^^

.. py:class:: Role(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.Role;

      .. code-tab:: javascript

         const { Role } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { Role } from '@aws-cdk/aws-iam';



   IAM Role  Defines an IAM role. The role is created with an assume policy document associated with the specified AWS service principal defined in `serviceAssumeRole`.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`~@aws-cdk/aws-iam.IIdentityResource`
   :implements: :py:class:`~@aws-cdk/aws-iam.IPrincipal`
   :implements: :py:class:`@aws-cdk/cdk.IDependable`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-iam.RoleProps`

   .. py:method:: addToPolicy(statement)

      Adds a permission to the role's default policy document. If there is no default policy attached to this role, it will be created.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: attachInlinePolicy(policy)

      Attaches a policy to this role.


      :param policy: The policy to attach
      :type policy: :py:class:`~@aws-cdk/aws-iam.Policy`


   .. py:method:: attachManagedPolicy(arn)

      Attaches a managed policy to this role.


      :param arn: The ARN of the managed policy to attach.
      :type arn: :py:class:`@aws-cdk/cdk.Arn`


   .. py:attribute:: dependencyElements

      Returns the role.


      :type: :py:class:`@aws-cdk/cdk.IDependable`[] *(readonly)*


   .. py:attribute:: principal

      Returns the ARN of this role.


      :type: :py:class:`@aws-cdk/cdk.PolicyPrincipal` *(readonly)*


   .. py:attribute:: roleArn

      Returns the ARN of this role.


      :type: :py:class:`~@aws-cdk/aws-iam.RoleArn` *(readonly)*


   .. py:attribute:: roleName

      Returns the name of the role.


      :type: :py:class:`~@aws-cdk/aws-iam.RoleName` *(readonly)*


   .. py:attribute:: assumeRolePolicy

      The assume role policy document associated with this role.


      :type: :py:class:`@aws-cdk/cdk.PolicyDocument` or undefined *(readonly)*


RoleArn
^^^^^^^

.. py:class:: RoleArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.RoleArn;

      .. code-tab:: javascript

         const { RoleArn } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { RoleArn } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

RoleId
^^^^^^

.. py:class:: RoleId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.RoleId;

      .. code-tab:: javascript

         const { RoleId } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { RoleId } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

RoleName
^^^^^^^^

.. py:class:: RoleName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.RoleName;

      .. code-tab:: javascript

         const { RoleName } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { RoleName } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

RoleProps (interface)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RoleProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.RoleProps;

      .. code-tab:: javascript

         // RoleProps is an interface

      .. code-tab:: typescript

         import { RoleProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: assumedBy

      The IAM principal (i.e. `new ServicePrincipal('sns.amazonaws.com')`) which can assume this role.  You can later modify the assume role policy document by accessing it via the `assumeRolePolicy` property.


      :type: :py:class:`@aws-cdk/cdk.PolicyPrincipal`


   .. py:attribute:: managedPolicyArns

      A list of ARNs for managed policies associated with this role. You can add managed policies later using `attachManagedPolicy(arn)`.


      :type: any[] or undefined


   .. py:attribute:: maxSessionDurationSec

      The maximum session duration (in seconds) that you want to set for the specified role. If you do not specify a value for this setting, the default maximum of one hour is applied. This setting can have a value from 1 hour (3600sec) to 12 (43200sec) hours.  Anyone who assumes the role from the AWS CLI or API can use the DurationSeconds API parameter or the duration-seconds CLI parameter to request a longer session. The MaxSessionDuration setting determines the maximum duration that can be requested using the DurationSeconds parameter.  If users don't specify a value for the DurationSeconds parameter, their security credentials are valid for one hour by default. This applies when you use the AssumeRole* API operations or the assume-role* CLI operations but does not apply when you use those operations to create a console URL.
      https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use.html


      :type: number or undefined


   .. py:attribute:: path

      The path associated with this role. For information about IAM paths, see Friendly Names and Paths in IAM User Guide.


      :type: string or undefined


   .. py:attribute:: roleName

      A name for the IAM role. For valid values, see the RoleName parameter for the CreateRole action in the IAM API Reference. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the group name.  IMPORTANT: If you specify a name, you cannot perform updates that require replacement of this resource. You can perform updates that require no or some interruption. If you must replace the resource, specify a new name.  If you specify a name, you must specify the CAPABILITY_NAMED_IAM value to acknowledge your template's capabilities. For more information, see Acknowledging IAM Resources in AWS CloudFormation Templates.


      :type: string or undefined


User
^^^^

.. py:class:: User(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.User;

      .. code-tab:: javascript

         const { User } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { User } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`~@aws-cdk/aws-iam.IIdentityResource`
   :implements: :py:class:`~@aws-cdk/aws-iam.IPrincipal`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-iam.UserProps`

   .. py:method:: addToGroup(group)

      Adds this user to a group.


      :param group: 
      :type group: :py:class:`~@aws-cdk/aws-iam.Group`


   .. py:method:: addToPolicy(statement)

      Adds an IAM statement to the default policy.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: attachInlinePolicy(policy)

      Attaches a policy to this user.


      :param policy: 
      :type policy: :py:class:`~@aws-cdk/aws-iam.Policy`


   .. py:method:: attachManagedPolicy(arn)

      Attaches a managed policy to the user.


      :param arn: The ARN of the managed policy to attach.
      :type arn: :py:class:`@aws-cdk/cdk.Arn`


   .. py:attribute:: principal

      Returns the ARN of this user.


      :type: :py:class:`@aws-cdk/cdk.PolicyPrincipal` *(readonly)*


   .. py:attribute:: userArn

      An attribute that represents the user's ARN.


      :type: :py:class:`~@aws-cdk/aws-iam.UserArn` *(readonly)*


   .. py:attribute:: userName

      An attribute that represents the user name.


      :type: :py:class:`~@aws-cdk/aws-iam.UserName` *(readonly)*


UserArn
^^^^^^^

.. py:class:: UserArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.UserArn;

      .. code-tab:: javascript

         const { UserArn } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { UserArn } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

UserName
^^^^^^^^

.. py:class:: UserName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.UserName;

      .. code-tab:: javascript

         const { UserName } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { UserName } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

UserProps (interface)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: UserProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.UserProps;

      .. code-tab:: javascript

         // UserProps is an interface

      .. code-tab:: typescript

         import { UserProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: groups

      Groups to add this user to. You can also use `addToGroup` to add this user to a group.


      :type: :py:class:`~@aws-cdk/aws-iam.Group`[] or undefined


   .. py:attribute:: managedPolicyArns

      A list of ARNs for managed policies attacherd to this user. You can use `addManagedPolicy(arn)` to attach a managed policy to this user.


      :type: any[] or undefined


   .. py:attribute:: password

      The password for the user. This is required so the user can access the AWS Management Console.


      :type: string or undefined


   .. py:attribute:: passwordResetRequired

      Specifies whether the user is required to set a new password the next time the user logs in to the AWS Management Console.  If this is set to 'true', you must also specify "initialPassword".


      :type: boolean or undefined


   .. py:attribute:: path

      The path for the user name. For more information about paths, see IAM Identifiers in the IAM User Guide.


      :type: string or undefined


   .. py:attribute:: userName

      A name for the IAM user. For valid values, see the UserName parameter for the CreateUser action in the IAM API Reference. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the user name.  If you specify a name, you cannot perform updates that require replacement of this resource. You can perform updates that require no or some interruption. If you must replace the resource, specify a new name.  If you specify a name, you must specify the CAPABILITY_NAMED_IAM value to acknowledge your template's capabilities. For more information, see Acknowledging IAM Resources in AWS CloudFormation Templates.


      :type: string or undefined



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-iam.cloudformation

AccessKeyResource
~~~~~~~~~~~~~~~~~

.. py:class:: AccessKeyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.AccessKeyResource;

      .. code-tab:: javascript

         const { cloudformation.AccessKeyResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.AccessKeyResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AccessKeyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AccessKeyResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.AccessKeyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: accessKeySecretAccessKey

      :type: :py:class:`~@aws-cdk/aws-iam.AccessKeySecretAccessKey` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.AccessKeyId` *(readonly)*


AccessKeyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AccessKeyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.AccessKeyResourceProps;

      .. code-tab:: javascript

         // cloudformation.AccessKeyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AccessKeyResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: userName

      ``AWS::IAM::AccessKey.UserName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-accesskey.html#cfn-iam-accesskey-username


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: serial

      ``AWS::IAM::AccessKey.Serial``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-accesskey.html#cfn-iam-accesskey-serial


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: status

      ``AWS::IAM::AccessKey.Status``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-accesskey.html#cfn-iam-accesskey-status


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


GroupResource
~~~~~~~~~~~~~

.. py:class:: GroupResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.GroupResource;

      .. code-tab:: javascript

         const { cloudformation.GroupResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.GroupResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``GroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``GroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.GroupResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: groupArn

      :type: :py:class:`~@aws-cdk/aws-iam.GroupArn` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.GroupName` *(readonly)*

   .. py:class:: PolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.iam.cloudformation.GroupResource.PolicyProperty;

         .. code-tab:: javascript

            // cloudformation.GroupResource.PolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.GroupResource.PolicyProperty } from '@aws-cdk/aws-iam';





      .. py:attribute:: policyDocument

         ``GroupResource.PolicyProperty.PolicyDocument``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-policy.html#cfn-iam-policies-policydocument


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: policyName

         ``GroupResource.PolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-policy.html#cfn-iam-policies-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



GroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: GroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.GroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.GroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.GroupResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: groupName

      ``AWS::IAM::Group.GroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-group.html#cfn-iam-group-groupname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: managedPolicyArns

      ``AWS::IAM::Group.ManagedPolicyArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-group.html#cfn-iam-group-managepolicyarns


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: path

      ``AWS::IAM::Group.Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-group.html#cfn-iam-group-path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: policies

      ``AWS::IAM::Group.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-group.html#cfn-iam-group-policies


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-iam.cloudformation.GroupResource.PolicyProperty`)[] or undefined


InstanceProfileResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: InstanceProfileResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.InstanceProfileResource;

      .. code-tab:: javascript

         const { cloudformation.InstanceProfileResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.InstanceProfileResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``InstanceProfileResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``InstanceProfileResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.InstanceProfileResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: instanceProfileArn

      :type: :py:class:`~@aws-cdk/aws-iam.InstanceProfileArn` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.InstanceProfileName` *(readonly)*


InstanceProfileResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: InstanceProfileResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.InstanceProfileResourceProps;

      .. code-tab:: javascript

         // cloudformation.InstanceProfileResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.InstanceProfileResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: roles

      ``AWS::IAM::InstanceProfile.Roles``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-instanceprofile.html#cfn-iam-instanceprofile-roles


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


   .. py:attribute:: instanceProfileName

      ``AWS::IAM::InstanceProfile.InstanceProfileName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-instanceprofile.html#cfn-iam-instanceprofile-instanceprofilename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: path

      ``AWS::IAM::InstanceProfile.Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-instanceprofile.html#cfn-iam-instanceprofile-path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


ManagedPolicyResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ManagedPolicyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.ManagedPolicyResource;

      .. code-tab:: javascript

         const { cloudformation.ManagedPolicyResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.ManagedPolicyResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ManagedPolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ManagedPolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.ManagedPolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.ManagedPolicyArn` *(readonly)*


ManagedPolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ManagedPolicyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.ManagedPolicyResourceProps;

      .. code-tab:: javascript

         // cloudformation.ManagedPolicyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ManagedPolicyResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: policyDocument

      ``AWS::IAM::ManagedPolicy.PolicyDocument``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-iam-managedpolicy-policydocument


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: description

      ``AWS::IAM::ManagedPolicy.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-iam-managedpolicy-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: groups

      ``AWS::IAM::ManagedPolicy.Groups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-iam-managedpolicy-groups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: managedPolicyName

      ``AWS::IAM::ManagedPolicy.ManagedPolicyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-iam-managedpolicy-managedpolicyname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: path

      ``AWS::IAM::ManagedPolicy.Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-ec2-dhcpoptions-path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: roles

      ``AWS::IAM::ManagedPolicy.Roles``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-iam-managedpolicy-roles


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: users

      ``AWS::IAM::ManagedPolicy.Users``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-managedpolicy.html#cfn-iam-managedpolicy-users


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


PolicyResource
~~~~~~~~~~~~~~

.. py:class:: PolicyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.PolicyResource;

      .. code-tab:: javascript

         const { cloudformation.PolicyResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.PolicyResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.PolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.PolicyName` *(readonly)*


PolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PolicyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.PolicyResourceProps;

      .. code-tab:: javascript

         // cloudformation.PolicyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PolicyResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: policyDocument

      ``AWS::IAM::Policy.PolicyDocument``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-policy.html#cfn-iam-policy-policydocument


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: policyName

      ``AWS::IAM::Policy.PolicyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-policy.html#cfn-iam-policy-policyname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: groups

      ``AWS::IAM::Policy.Groups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-policy.html#cfn-iam-policy-groups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: roles

      ``AWS::IAM::Policy.Roles``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-policy.html#cfn-iam-policy-roles


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: users

      ``AWS::IAM::Policy.Users``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-policy.html#cfn-iam-policy-users


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


RoleResource
~~~~~~~~~~~~

.. py:class:: RoleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.RoleResource;

      .. code-tab:: javascript

         const { cloudformation.RoleResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.RoleResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RoleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RoleResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.RoleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.RoleName` *(readonly)*


   .. py:attribute:: roleArn

      :type: :py:class:`~@aws-cdk/aws-iam.RoleArn` *(readonly)*


   .. py:attribute:: roleId

      :type: :py:class:`~@aws-cdk/aws-iam.RoleId` *(readonly)*

   .. py:class:: PolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.iam.cloudformation.RoleResource.PolicyProperty;

         .. code-tab:: javascript

            // cloudformation.RoleResource.PolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RoleResource.PolicyProperty } from '@aws-cdk/aws-iam';





      .. py:attribute:: policyDocument

         ``RoleResource.PolicyProperty.PolicyDocument``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-policy.html#cfn-iam-policies-policydocument


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: policyName

         ``RoleResource.PolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-policy.html#cfn-iam-policies-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



RoleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RoleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.RoleResourceProps;

      .. code-tab:: javascript

         // cloudformation.RoleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.RoleResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: assumeRolePolicyDocument

      ``AWS::IAM::Role.AssumeRolePolicyDocument``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-assumerolepolicydocument


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: managedPolicyArns

      ``AWS::IAM::Role.ManagedPolicyArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-managepolicyarns


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: maxSessionDuration

      ``AWS::IAM::Role.MaxSessionDuration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-maxsessionduration


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: path

      ``AWS::IAM::Role.Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: policies

      ``AWS::IAM::Role.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-policies


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-iam.cloudformation.RoleResource.PolicyProperty`)[] or undefined


   .. py:attribute:: roleName

      ``AWS::IAM::Role.RoleName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-role.html#cfn-iam-role-rolename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


ServiceLinkedRoleResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ServiceLinkedRoleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.ServiceLinkedRoleResource;

      .. code-tab:: javascript

         const { cloudformation.ServiceLinkedRoleResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.ServiceLinkedRoleResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ServiceLinkedRoleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ServiceLinkedRoleResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.ServiceLinkedRoleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ServiceLinkedRoleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ServiceLinkedRoleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.ServiceLinkedRoleResourceProps;

      .. code-tab:: javascript

         // cloudformation.ServiceLinkedRoleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ServiceLinkedRoleResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: awsServiceName

      ``AWS::IAM::ServiceLinkedRole.AWSServiceName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-servicelinkedrole.html#cfn-iam-servicelinkedrole-awsservicename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: customSuffix

      ``AWS::IAM::ServiceLinkedRole.CustomSuffix``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-servicelinkedrole.html#cfn-iam-servicelinkedrole-customsuffix


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::IAM::ServiceLinkedRole.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iam-servicelinkedrole.html#cfn-iam-servicelinkedrole-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


UserResource
~~~~~~~~~~~~

.. py:class:: UserResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.UserResource;

      .. code-tab:: javascript

         const { cloudformation.UserResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.UserResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.UserResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-iam.UserName` *(readonly)*


   .. py:attribute:: userArn

      :type: :py:class:`~@aws-cdk/aws-iam.UserArn` *(readonly)*

   .. py:class:: LoginProfileProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.iam.cloudformation.UserResource.LoginProfileProperty;

         .. code-tab:: javascript

            // cloudformation.UserResource.LoginProfileProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserResource.LoginProfileProperty } from '@aws-cdk/aws-iam';





      .. py:attribute:: password

         ``UserResource.LoginProfileProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user-loginprofile.html#cfn-iam-user-loginprofile-password


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: passwordResetRequired

         ``UserResource.LoginProfileProperty.PasswordResetRequired``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user-loginprofile.html#cfn-iam-user-loginprofile-passwordresetrequired


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: PolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IAM;

         .. code-tab:: java

            import software.amazon.awscdk.services.iam.cloudformation.UserResource.PolicyProperty;

         .. code-tab:: javascript

            // cloudformation.UserResource.PolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.UserResource.PolicyProperty } from '@aws-cdk/aws-iam';





      .. py:attribute:: policyDocument

         ``UserResource.PolicyProperty.PolicyDocument``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-policy.html#cfn-iam-policies-policydocument


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: policyName

         ``UserResource.PolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-policy.html#cfn-iam-policies-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



UserResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.UserResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: groups

      ``AWS::IAM::User.Groups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user.html#cfn-iam-user-groups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: loginProfile

      ``AWS::IAM::User.LoginProfile``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user.html#cfn-iam-user-loginprofile


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-iam.cloudformation.UserResource.LoginProfileProperty` or undefined


   .. py:attribute:: managedPolicyArns

      ``AWS::IAM::User.ManagedPolicyArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user.html#cfn-iam-user-managepolicyarns


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: path

      ``AWS::IAM::User.Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user.html#cfn-iam-user-path


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: policies

      ``AWS::IAM::User.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user.html#cfn-iam-user-policies


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-iam.cloudformation.UserResource.PolicyProperty`)[] or undefined


   .. py:attribute:: userName

      ``AWS::IAM::User.UserName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-user.html#cfn-iam-user-username


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


UserToGroupAdditionResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserToGroupAdditionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.UserToGroupAdditionResource;

      .. code-tab:: javascript

         const { cloudformation.UserToGroupAdditionResource } = require('@aws-cdk/aws-iam');

      .. code-tab:: typescript

         import { cloudformation.UserToGroupAdditionResource } from '@aws-cdk/aws-iam';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserToGroupAdditionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserToGroupAdditionResource``
   :type properties: :py:class:`~@aws-cdk/aws-iam.cloudformation.UserToGroupAdditionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


UserToGroupAdditionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserToGroupAdditionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IAM;

      .. code-tab:: java

         import software.amazon.awscdk.services.iam.cloudformation.UserToGroupAdditionResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserToGroupAdditionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserToGroupAdditionResourceProps } from '@aws-cdk/aws-iam';





   .. py:attribute:: groupName

      ``AWS::IAM::UserToGroupAddition.GroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-addusertogroup.html#cfn-iam-addusertogroup-groupname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: users

      ``AWS::IAM::UserToGroupAddition.Users``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iam-addusertogroup.html#cfn-iam-addusertogroup-users


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]



.. py:currentmodule:: @aws-cdk/aws-iam

